--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.22.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
