--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "bootstrap": "^4.3.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "mutationobserver-shim": "^0.3.3",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "vue-cli-plugin-bootstrap": "~0.4.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
